--- a/event.html
+++ b/event.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>event event-update-page</title>
-    <link rel="stylesheet" href="event.css">
+    <link rel="stylesheet" href="./event.css">
 </head>
 <body><header class="container1">
     <div class="h1">
